@@ -81,6 +81,7 @@ class Triangulation3Test : public TriangulationTest<3> {
     CPPUNIT_TEST(orient);
     CPPUNIT_TEST(doubleCover);
     CPPUNIT_TEST(boundaryTriangles);
+    CPPUNIT_TEST(boundaryFaces);
     CPPUNIT_TEST(boundaryBuild);
     CPPUNIT_TEST(edgeAccess);
     CPPUNIT_TEST(pachner<0>);
@@ -454,6 +455,10 @@ class Triangulation3Test : public TriangulationTest<3> {
 
         void boundaryTriangles() {
             testManualAll(verifyBoundaryFacets);
+        }
+
+        void boundaryFaces() {
+            testManualAll(verifyBoundaryFaces);
         }
 
         void boundaryBuild() {
