@@ -11,6 +11,9 @@ Version 7.1  [ TODO ]
 
     GENERAL:
         - Regina now supports Python 3 only (not Python 2 or 3).
+    ENGINE:
+        Class Triangulation<dim>:
+            - New suite of routines countBoundaryFaces().
 
 Version 7.0  [ 19 December, 2021 ]
 
